@@ -1,3 +1,7 @@
+2016-07-28  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * gpasm/cod.c, gputils/dump.c:
+    Bugfix: The COD_LS_SLINE and COD_LS_SLOC is unsigned short.
+
 2016-07-26  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gpasm/coff.c, gpasm/coff.h, gpasm/lst.c:
     Renamed these functions:
